# ros-speech-led-control

./: .gitignore  CMakeLists.txt  README.md  package.xml
Arduino_IDE_Code/: ros_connect.ino
launch/: start_node.launch
scripts/: arduino_connect.py  center.py  pointcloud_publisher.py  pointcloud_subscriber.py  rec_node.py
